# OOSD

./: README.md
C++/: test.cpp
Game/: Game.sln  Game.vcxproj
Game/Debug/: Game.exe.recipe  Game.ilk  Game.vcxproj.FileListAbsolute.txt  vc142.idb
Game/Debug/Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SFMLGame/: CMakeLists.txt  main.cpp
